@@ -2,9 +2,9 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 build:
-  os: ubuntu-24.04
+  os: ubuntu-25.04
   tools:
-    python: '3.10'
+    python: '3.11'
 python:
   install:
     - method: pip
